--- a/languages/english.json
+++ b/languages/english.json
@@ -12,8 +12,8 @@
     "removed": "Must wait another %t seconds to count your removed games again (%cd second cooldown)",
     "playtime": "Must wait another %t seconds to search for a user playtime again (%cd second cooldown)",
     "convert": "Must wait another %t seconds to convert money again (%cd second cooldown)",
-    "popular": "Must wait another %t seconds before getting help again (%cd second cooldown)",
-    "userdata": "Must wait another %t seconds before getting help again (%cd second cooldown)",
+    "popular": "Must wait another %t seconds before getting popular games again (%cd second cooldown)",
+    "userdata": "Must wait another %t seconds before getting user data again (%cd second cooldown)",
     "help": "Must wait another %t seconds before getting help again (%cd second cooldown)",
     "info": "Must wait another %t seconds before getting info again (%cd second cooldown)",
     "stats": "Must wait another %t seconds before getting info again (%cd second cooldown)",
