fixing some stuff

--- a/languages/russian.json
+++ b/languages/russian.json
@@ -40,12 +40,12 @@
     ],
     "price": "старая цена:",
     "games": "Доступны следующие результаты:",
-    "top": "Самые продаваемые в Steam",
+    "top": "Самое продаваемое в Steam",
     "new": "Новые релизы в Steam",
     "upcoming": "Уже скоро в Steam",
     "specials": "Скидки в Steam",
     "user": [
-       "            Никнейм: %s",
+       "                Ник: %s",
        "                 ID: %s",
        "       Реальное имя: %s",
        "             Страна: %s",
@@ -56,7 +56,7 @@
     "library": "Топ 10 игр у %s (Всего %s игр):",
     "removed": "`%s` из `%s` игр в библиотеке у %s' были удалены из стима (Всего %s игр было удалено из стима за все время)",
     "playtime": "%s имеет %s в %s",
-    "playtime_start": "%s часов сыграно",
+    "playtime_start": "%s часов в игре",
     "playtime_end": " (%s часов за последние 2 недели)",
     "userdata": [
        "Количество игроков онлайн за последние 48 часов:",
@@ -67,10 +67,10 @@
     "help_other": [
       "Остальные команды для SteamBot",
       "   steam feedback [message]     - отсылает отзыв разработчику (включая уведомления об ошибках!)",
-      "   steam invite                 - приглашает SteamBot на ваш сервер",
-      "   steam info                   - показывает информацию про SteamBot",
+      "   steam invite                 - приглашает SteamBot'а на ваш сервер",
+      "   steam info                   - показывает информацию про SteamBot'а",
       "   steam stats                  - показывает статистику по SteamBot'у",
-      "   steam clean [limit]          - удаляет указанное количество последний сообщений от SteamBot",
+      "   steam clean [limit]          - удаляет указанное количество последний сообщений от SteamBot'а",
       "   steam perm help              - показывает информацию по настройке прав",
       "   steam convert [amount] [currency] [currency]  - конвертирует одну валюту в другую по курсу стима",
       "",
@@ -96,13 +96,13 @@
       "   steam popular                -Показывает список игр с наибольшим количеством игроков в онлайне",
       "   steam userdata               - Показывает информацию о количестве пользователей онлайн за последние 48 часов",
       "   steam removed [user]         -  Показывает количество удаленных из стима игр в библиотеке указанного пользователя (спасибо @TheAnthonyNL)",
-      "   steam me [name]              - Присваивает ваш никнейм в стиме по умолчанию для SteamBot (если не вводить никнейм он будет использовать присвоенный для команд)",
-      "   steam name [user|mention]    - Проверить никнейм пользователя в стиме если он был присвоен ранее",
+      "   steam me [name]              - Присваивает ваш ник в стиме для SteamBot'a (он будет использован по умолчанию, если не введен любой другой)",
+      "   steam name [user|mention]    - Проверить ник пользователя в стиме если он был присвоен ранее",
       "   steam language [language]    - Выбрать язык для сообщений от бота",
       "   steam country [countrycode]  - Выбрать страну для Магазина Steam (код из двух букв, например GB, UA или RU)",
       "   steam currency [currency] [symbol] - Выбрать валюту по умолчанию для Торговой площадки (код из 3 букв, например USD или GBP, символ например $ или £)"
     ],
-    "help_dm": "Команды высланы личным сообщением!",
+    "help_dm": "Команды высланы в личном сообщении!",
     "info": [
       "SteamBot был создан Billyoyo",
       "",
@@ -113,31 +113,31 @@
       "SteamBot работает на %s серверах наработав %s, %s команд было обработано с момента последней перезагрузки",
       "Этот сервер в ячейке %s (к этой ячейке принадлежит еще %s серверов)",
       "```",
-      "Если вы хотите поддержать разработку SteamBot'а и помочь с оплатой хостинга - вы можете сделать пожертвование по этой ссылке:",
+      "Если вы хотите поддержать разработку SteamBot'а и помочь с оплатой хостинга - вы можете сделать пожертвование по ссылке:",
       "%s"
     ],
     "stats": [
-      "Серверов: %s",
-      "Каналов: %s",
-      "Участников: %s",
-      "Команд: %s",
-      "Команд в среднем за день: %s",
+      "                  Серверов: %s",
+      "                   Каналов: %s",
+      "                Участников: %s",
+      "                  Запросов: %s",
+      "Запросов в среднем за день: %s",
       "",
       "Статистика за сегодня:",
-      "Серверов: %s",
-      "Каналов: %s",
+      "  Серверов: %s",
+      "   Каналов: %s",
       "Участников: %s",
-      "Команд: %s"
+      "  Запросов: %s"
     ],
     "item": [
-      "Название: %s:",
-      "Цена: %s",
+      "   Название: %s:",
+      "       Цена: %s",
       "Изображение: %s",
       "%s",
       "",
       "%s"
     ],
-    "screenshot": "Первый скриншот от %s:",
+    "screenshot": "Первый найденный скриншот от %s:",
     "achiev": [
       "Название: %s",
       "Описание: %s",
@@ -145,9 +145,9 @@
       " Процент: %s"
     ],
     "achiev_percent": "игроков получили это достижение",
-    "invite": "Используйте эту ссылку для приглашения меня на ваш сервер:",
-    "me": "Установить ваш никнейм в стиме на ",
-    "name": ["никнейм установлен как", "Ваш никнейм в стиме установлен как"],
+    "invite": "Используйте эту ссылку для приглашения бота на ваш сервер:",
+    "me": "Указать ваш ник в стиме на ",
+    "name": [" указал себя как", "Вы указали себя в стиме как"],
     "currency": "Ваша валюту по умолчанию изменена с %s на (%s, %s)",
     "country": "Ваша страна в стиме изменена с %s на %s",
     "feedback": "Отзыв послан!",
@@ -163,9 +163,9 @@
     "playtime": "%s еще не играл в %s",
     "screenshot": "У пользователя `%s` не обнаружено публичных скриншотов",
     "achiev": "Не могу найти достижение с названием `%s`",
-    "name_mention": "Работает только если привязан хотя бы один никнейм!",
-    "name_unset_other": "%s еще не привязал свой никнейм в стиме, но может сделать это используя команду `steam me [username]` для привязки!",
-    "name_unset": "Вы еще не привязали свой никнейм, используйте `steam me [username]` для привязки!",
+    "name_mention": "Работает только если указан хотя бы один ник в стиме!",
+    "name_unset_other": "%s еще не указал свой ник в стиме, но может сделать это используя команду `steam me [username]` для привязки!",
+    "name_unset": "Вы еще не указал свой ник в стиме, используйте `steam me [username]` для привязки!",
     "currency_invalid": "Значок валюты не может быть больше 5 символов!",
     "currency_unsupported": "Неизвестный код валюты, зайдите на https://docs.openexchangerates.org/docs/supported-currencies для посмотра списка кодов поддерживаемых валют",
     "country_unsupported": "Неизвестный код страны, зайдите на https://gist.githubusercontent.com/keeguon/2310008/raw/bdc2ce1c1e3f28f9cab5b4393c7549f38361be4e/countries.json для просмотра списка кодов доступных стран",
