--- a/languages/russian.json
+++ b/languages/russian.json
@@ -27,7 +27,10 @@
     "feedback": "Необходимо подождать еще %t секунд, прежде чем опять отправить отзыв (%cd секунд задержки)",
     "language": "Необходимо подождать еще %t секунд, прежде чем снова изменить ваш язык (%cd секунд задержки)",
     "random": "Необходимо подождать еще %t секунд, прежде чем снова получить случайное предложение игры (%cd секунд задержки)",
-    "wishlist": "Must wait another %t seconds before looking at your wishlist again (%cd second cooldown)"
+    "wishlist": "Необходимо подождать еще %t секунд, прежде чем снова получить список желаемого (%cd секунд задержки)",
+    "server_language": "Необходимо подождать еще %t секунд для смены языка по умолчанию для сервера (%cd секунд задержки)",
+    "prefix": "Необходимо подождать еще %t секунд, прежде чем снова изменить префикс (%cd секунд задержки)",
+    "watch_help": "Must wait another %t seconds before getting watch help again (%cd second cooldown)"
   },
 
   "messages": {
@@ -71,6 +74,7 @@
       "   steam info                   - показывает информацию про SteamBot'а",
       "   steam stats                  - показывает статистику по SteamBot'у",
       "   steam clean [limit]          - удаляет указанное количество последний сообщений от SteamBot'а",
+      "   steam prefix [server|channel] \"prefix\" - установить префикс для этого сервера или канала",
       "   steam perm help              - показывает информацию по настройке прав",
       "   steam convert [amount] [currency] [currency]  - конвертирует одну валюту в другую по курсу стима",
       "",
@@ -85,7 +89,7 @@
       "   steam users [name]           - Поиск всех пользователей с никнеймами совпадающими с эапросом 'name'",
       "   steam item [game] \"item\"     - Поиск информации по вещи на Торговой площадке",
       "   steam library [name]         - Показывает игры в библиотеке конкретного пользователя",
-      "   steam wishlist [name]        - search for the games in a users wishlist which are on sale",
+      "   steam wishlist [name]        - показывает список желаемого у пользователя, с играми на распродаже",
       "   steam playtime [user] \"game\" - Показывает время в конкретной игре у конкретного пользователя",
       "   steam random [user]          - Выбирает показать наугад игру из библиотеки конкретного пользователя",
       "   steam achiev [game] \"achiev\" - Показывает информацию о конкретном игровом достижении среди всех игроков в мире",
@@ -99,29 +103,41 @@
       "   steam me [name]              - Присваивает ваш ник в стиме для SteamBot'a (он будет использован по умолчанию, если не введен любой другой)",
       "   steam name [user|mention]    - Проверить ник пользователя в стиме если он был присвоен ранее",
       "   steam language [language]    - Выбрать язык для сообщений от бота",
+      "   steam server_language [language] - установить язык по умолчанию для этого сервера",
       "   steam country [countrycode]  - Выбрать страну для Магазина Steam (код из двух букв, например GB, UA или RU)",
       "   steam currency [currency] [symbol] - Выбрать валюту по умолчанию для Торговой площадки (код из 3 букв, например USD или GBP, символ например $ или £)"
     ],
     "help_dm": "Команды высланы в личном сообщении!",
     "info": [
-      "SteamBot был создан Billyoyo",
+      "SteamBot разработал Billyoyo",
       "",
       "введите 'steam help' для получения списка команд,",
       "или 'steam invite' для приглашения бота на ваш сервер",
       "",
-      "SteamBot был создан с использованием Discord.Py и комбинации из Steam WebAPI и BeautifulSoup4",
-      "SteamBot работает на %s серверах наработав %s, %s команд было обработано с момента последней перезагрузки",
-      "Этот сервер в ячейке %s (к этой ячейке принадлежит еще %s серверов)",
+      "SteamBot был создан при помощи Discord.Py используя Steam WebAPI и BeautifulSoup4",
+      "SteamBot обслуживает %s серверов. Онлайн бота составляет %s, С момента последней перезагрузки было обработано %s запросов.",
+      "Этот сервер подключен к узлу #%s (к этому узлу подключено еще %s серверов)",
       "```",
       "Если вы хотите поддержать разработку SteamBot'а и помочь с оплатой хостинга - вы можете сделать пожертвование по ссылке:",
       "%s"
     ],
+    "premium": [
+      "SteamBot premium member rewards:",
+      "  - allowed to use the 'watch' command, which notifies you when a specific game goes on sale",
+      "  - access to the private development channel in our server",
+      "  - more premium features on there way, suggest some!",
+      "",
+      "Premium features are features my bot wouldn't be able to handle everyone having access to",
+      "To become a premium member, just pledge at least $1 per month on our patreon:",
+      "```",
+      "https://www.patreon.com/billyoyo"
+    ],
     "stats": [
-      "                  Серверов: %s",
-      "                   Каналов: %s",
-      "                Участников: %s",
-      "                  Запросов: %s",
-      "Запросов в среднем за день: %s",
+      "              Серверов: %s",
+      "               Каналов: %s",
+      "            Участников: %s",
+      "              Запросов: %s",
+      "Запросов (ср. за день): %s",
       "",
       "Статистика за сегодня:",
       "  Серверов: %s",
@@ -144,6 +160,22 @@
       "  Иконка: %s",
       " Процент: %s"
     ],
+    "perm_help": [
+      "Commands For Permissions:  (all commands effect the *current* server or channel)",
+      "    steam perm server|channel get [command]                  - get all the permissions required for this command",
+      "    steam perm server|channel add [command] [permissions]    - add some permissions to this command",
+      "    steam perm server|channel remove [command] [permissions] - remove some permissions for this command",
+      "    steam perm server|channel clear [command]                - remove all the permissions for this command",
+      "",
+      "[permissions] is a list seperated by a comma, like this:",
+      "    manage messages, kick members, role|254650759927300096",
+      "where role|254650759927300096 is role|[id], with [id] being the id of a role, use \"steam roleid [role]\" to get a role's id"
+    ],
+    "perm_get": "Current permissions for %s in this %s are:\n %s",
+    "perm_empty": "No permissions are set for %s in this %s",
+    "perm_clear": "Cleared all permissions for %s in this %s",
+    "perm_add": "Added the following permissions for %s in this %s:\n %s",
+    "perm_remove": "Removed the following permissions from %s in this %s:\n %s",
     "achiev_percent": "игроков получили это достижение",
     "invite": "Используйте эту ссылку для приглашения бота на ваш сервер:",
     "me": "Указать ваш ник в стиме на ",
@@ -152,8 +184,42 @@
     "country": "Ваша страна в стиме изменена с %s на %s",
     "feedback": "Отзыв послан!",
     "language": "Ваш язык изменен на %s",
-    "wishlist": "Games in your wishlist which are on sale:",
-    "wishlist_long": "Games in your wishlist which are on sale: (First 10 only, your wishlist is too long!)"
+    "server_language": "Язык на сервере изменен на %s",
+    "wishlist": "Игры из вашего списка желаемого, которые сейчас на распродаже:",
+    "wishlist_long": "Игры из вашего списка желаемого, которые сейчас на распродаже: (Только первые 10, ваш список слишком длинный!)",
+    "prefix_channel": "Установить префикс канала на %s",
+    "prefix_server": "Установить префикс сервера на %s",
+	"time": ["секунд", "секунд", "минут", "минут", "часов", "часов", "дней", "дней", "месяцев", "месяцев", "лет", "лет"],
+    "deal_started": "A deal for %s just started, it is now %s off!",
+    "deal_increased": "The deal for %s just increased, from %s to %s off!",
+    "deal_reduced": "The deal for %s just decreased, from %s to %s off!",
+    "deal_ended": "The deal for %s just ended (was %s off)",
+    "watch_added": "Watcher added, looking for when %s goes on sale for more than %s%% (ID: %s)",
+    "watch_help": [
+      "Commands For Watchers:",
+      "    steam watch add pm|mention|message [percent] [game]  - add a watcher for a game in this channel (or in your pms)",
+      "    steam watch remove [watcher-id]                      - remove a watcher",
+      "    steam watch get [watcher-id]                         - show some information about a specific watcher of yours",
+      "    steam watch list                                     - list all your watchers",
+      "    steam watch find [game]                              - find the ids of any watchers you have for that game",
+      "    steam watch help                                     - get this page",
+      "",
+      "Examples of using steam watch add:",
+      "   steam watch add pm 20% global offensive   -  will pm you any time CS:GO goes on sale for 20% or more",
+      "   steam watch add message 30% rocket league -  will send a message in this channel any time rocket league goes on sale for 30% or more",
+      "   steam watch add mention 10% The Forest    -  will mention you in this channel any time the forest goes on sale for 10% or more"
+    ],
+    "watch_removed": "Removed watcher with ID %s",
+    "watch_get": [
+      "         ID: %s",
+      "       Game: %s",
+      "    Percent: %s",
+      "   Location: %s",
+      "Location ID: %s"
+    ],
+    "watch_find": "You have the following watchers for %s\n  %s",
+    "watch_list": "You own the following watchers:\n  %s",
+    "watch_premium": "You must be a premium user to use this command, type 'steam premium' to find out more!"
   },
 
   "errors": {
@@ -169,7 +235,23 @@
     "currency_invalid": "Значок валюты не может быть больше 5 символов!",
     "currency_unsupported": "Неизвестный код валюты, зайдите на https://docs.openexchangerates.org/docs/supported-currencies для посмотра списка кодов поддерживаемых валют",
     "country_unsupported": "Неизвестный код страны, зайдите на https://gist.githubusercontent.com/keeguon/2310008/raw/bdc2ce1c1e3f28f9cab5b4393c7549f38361be4e/countries.json для просмотра списка кодов доступных стран",
-    "language": "Язык %s не доступен, доступные языки: %s"
+    "language": "Язык %s не доступен, доступные языки: %s",
+    "prefix": "Неправильно указан префикс, должен быть указан 'server' либо 'channel'",
+    "perm_dm": "Cannot set permissions in a private channel!",
+    "perm_destination": "destination for permission must be 'server' or 'channel'",
+    "perm_action": "action for permissin must be 'add', 'remove', 'get' or 'clear'",
+    "perm_invalid": "The following were invalid permissions: \n%s",
+    "perm_ignored": "The following permissions were ignored as they are already required: \n%s",
+    "perm_ignored_removed": "The following permissions were ignored as they aren't required: \n%s",
+    "no_roles": "No roles found matching %s",
+    "watch_locationtype": "Invalid location type, must be one of 'pm', 'mention' or 'message'",
+    "watch_percent": "Percent must be a number",
+    "watch_invalid_percent": "Percent must be greater than 0",
+    "watch_invalid_game": "Couldn't find a game matching %s",
+    "watch_cap": "You have hit the cap of watchers (You can't have more than %s watchers), please remove some before adding more",
+    "watch_exists": "A watcher for this game already exists in this channel, please remove it first if you want to add a different one",
+    "watch_noid": "Couldn't find a watcher with id %s",
+    "watch_find": "You don't have any watchers for %s"
   },
 
   "exceptions": {
